{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 8,
  "lineage": "95e8d39b-9ec9-698d-1c75-a60be8f62458",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_using_variable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025bffaee30ff3e4a",
            "arn": "arn:aws:ec2:ap-south-1:140687771725:instance/i-0beb2e7e2033fb21e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0beb2e7e2033fb21e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b273dccec25eba2",
            "private_dns": "ip-172-31-13-245.ap-south-1.compute.internal",
            "private_ip": "172.31.13.245",
            "public_dns": "ec2-13-233-144-216.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.144.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e47e64d9320606a5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "VPC-HTTP",
              "VPC-SSH"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035ff93ad689e54cd",
            "tags": {
              "Name": "MyInstance Variable Demo"
            },
            "tags_all": {
              "Name": "MyInstance Variable Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0816f592298c4f2f4",
              "sg-0849ca7fe6936feb0"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-HTTP",
            "aws_security_group.sg-SSH",
            "data.aws_ami.my_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140687771725:security-group/sg-0849ca7fe6936feb0",
            "description": "Allow HTTP access to the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0849ca7fe6936feb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC-HTTP",
            "name_prefix": "",
            "owner_id": "140687771725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-vpc-HTTP"
            },
            "tags_all": {
              "Name": "sg-vpc-HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-07489a1f049c9f424"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:140687771725:security-group/sg-0816f592298c4f2f4",
            "description": "Allow SSH access to the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0816f592298c4f2f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC-SSH",
            "name_prefix": "",
            "owner_id": "140687771725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-vpc-SSH"
            },
            "tags_all": {
              "Name": "sg-vpc-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-07489a1f049c9f424"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}